# aime-slm

./: main.py  notebook.ipynb  pyproject.toml  v1.py  v2.py
data/: v1.json  v2-1.json  v2.json
