[project]
name = "aime-slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.2.0",
    "ipykernel>=7.0.1",
    "ipynotebook>=0.1.0",
    "ipywidgets>=8.1.7",
    "math-verify>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pydantic-ai>=1.1.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
